# codegen/python-models/src/uma_auth/openapi.yaml
@@ -421,6 +421,7 @@ paths:
         required: false
         schema:
           example: 1683148800
+          format: int64
           type: integer
         style: form
       - description: Ending timestamp in seconds since epoch (inclusive).
@@ -430,6 +431,7 @@ paths:
         required: false
         schema:
           example: 1683148800
+          format: int64
           type: integer
         style: form
       - description: Maximum number of transactions to return.
@@ -555,13 +557,22 @@ components:
         created_at:
           description: The time the payment/invoice was created.
           example: 1683148800
+          format: int64
           title: created_at
           type: integer
         expires_at:
           description: The time the invoice expires.
           example: 1683148800
+          format: int64
           nullable: true
           title: expires_at
+          type: integer
+        settled_at:
+          description: "The time at which the transaction was settled, if it was settled."
+          example: 1683148800
+          format: int64
+          nullable: true
+          title: settled_at
           type: integer
         metadata:
           description: Additional metadata attached to the invoice.
@@ -597,6 +608,7 @@ components:
         expires_at:
           description: The time the quote expires in unix timestamp.
           example: 1683148800
+          format: int64
           title: expires_at
           type: integer
         multiplier:
@@ -635,6 +647,7 @@ components:
         created_at:
           description: The time the quote was created in unix timestamp.
           example: 1683148800
+          format: int64
           title: created_at
           type: integer
       required:
